# libSVMJni

./: CMakeLists.txt  README.md  build.sh
